# eql-meter

./: CHANGELOG.md  LICENSE.md  README.md  SECURITY.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml  windows-build.yml
docs/: mac-parallels.md  mac.md  windows.md
docs/images/: README.md
samples/: README.md  eqlog_Francis_legends.txt  eqlog_Kenkyo_freeport.txt
src/: App.css  App.tsx  Overlay.css  Overlay.tsx  overlay-main.tsx  updates.ts  useLiveDuration.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: eq_process.rs  lib.rs  log_find.rs  log_tail.rs  main.rs  settings.rs  spells.rs
src-tauri/src/fight/: mod.rs
src-tauri/src/parse/: avoid.rs  damage.rs  heal.rs  misc.rs  mod.rs  stance.rs  who.rs
